mengganti fitur klik di puzzle

--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
 <body>
   <div class="container">
     <h1>Game Puzzle</h1>
-    <div id="puzzleBoard" class="board">
-      <div class="tile" draggable="true"></div>
-      <div class="tile" draggable="true"></div>
-      <div class="tile" draggable="true"></div>
-      <div class="tile" draggable="true"></div>
-      <div class="tile" draggable="true"></div>
-      <div class="tile" draggable="true"></div>
-      <div class="tile" draggable="true"></div>
-      <div class="tile" draggable="true"></div>
-      <div class="tile empty"></div>
+    <div id="puzzleBoard">
     </div>
     <button onclick="startGame()">Mulai</button>
   </div>
