mengganti codingan dengan codingan yang baru

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Game Puzzle</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Game Puzzle</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Game Puzzle</h1>
-    <div id="puzzleBoard">
+    <div class="container">
+        <h1>Game Puzzle</h1>
+        <div id="puzzleBoard" class="board"></div>
+        <button onclick="startGame()">Mulai</button>
     </div>
-    <button onclick="startGame()">Mulai</button>
-  </div>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
